TournamentSeriesServiceTest solved